# API-KYC

./: .gitignore  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CONTINUE.md  GUIDE.md  Makefile  README.md  opencode.json  package-lock.json  package.json  postman-collection.json  postman-env.json
.github/workflows/: ci.yml  kyc-ci.yml  secret-scan.yml
sdks/: .gitignore
sdks/examples/go/: main.go
sdks/examples/javascript/: quickstart.js
sdks/examples/python/: quickstart.py
sdks/go/: README.md  client.go  countries.go  datakeys.go  errors.go  go.mod  kyc.go  kyc_test.go  models.go
sdks/go/examples/: main.go
sdks/javascript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdks/javascript/examples/: poll-status.js  quickstart.js  webhook-handler.js
sdks/javascript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/javascript/tests/: client.test.ts  country-helpers.test.ts  fixtures.ts  kyc.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/datakeys/: __init__.py  client.py  errors.py  models.py
sdks/python/datakeys/resources/: countries.py  kyc.py
sdks/python/examples/: poll_status.py  quickstart.py  webhook_handler.py
sdks/python/tests/: fixtures.py  test_client.py  test_kyc.py
sdks/react-widget/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdks/react-widget/src/: DatakeysModal.tsx  DatakeysWidget.tsx  index.tsx  (+1 more)
services/kyc/: .env.example  .gitignore  Dockerfile  Makefile  coverage  coverage.out  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  leak-report.txt
(+114 files in other folders)
